FIX: file-upload icon not visible. Adjust contrast of Input group button icons.

--- a/resources/assets/less/main.less
+++ b/resources/assets/less/main.less
@@ -289,6 +289,7 @@ textarea, select,
 .input-group-btn .btn {
   min-height: 34px;
   padding-right: 5px;
+  i { color: #777 }
 }
 
 /*--------------------------------------------------------------------
@@ -778,6 +779,7 @@ textarea[readonly].static {
     background-color: #fcfcfc;
     color: #777;
     font-weight: normal;
+    z-index: 2;
 
     &:focus {
       outline: none !important;
